Update cite this

--- a/multimodal-annotation-tool-R.html
+++ b/multimodal-annotation-tool-R.html
@@ -364,10 +364,7 @@ display: none;
 It requires an annotated file in ELAN (.eaf) format and outputs a table
 with the reference tier and the compared tiers.</p>
 <p>The tool multimodal-annotation-distance can be pulled from: <a href="https://github.com/JorgeFCS/multimodal-annotation-distance.git" class="uri">https://github.com/JorgeFCS/multimodal-annotation-distance.git</a></p>
-<p>To cite the tool: Barros, Camila A.; Ciprián-Sánchez, Jorge
-Francisco; Mendes Santos, Saulo. (2024) <em>A Tool for Determining
-Distances and Overlaps between Multimodal Annotations.</em> In
-LREC-COLING 2024</p>
+<p>To cite the tool: Barros, C. A., Ciprián-Sánchez, J. F., & Santos, S. M. (2024). A Tool for Determining Distances and Overlaps between Multimodal Annotations. In N. Calzolari, M.-Y. Kan, V. Hoste, A. Lenci, S. Sakti, & N. Xue (Eds.), <em>Proceedings of the 2024 Joint International Conference on Computational Linguistics, Language Resources and Evaluation (LREC-COLING 2024)</em> (pp. 1705–1714). ELRA and ICCL. https://aclanthology.org/2024.lrec-main.150</p>
 <div id="multimodal-annotation-tools" class="section level2">
 <h2>Multimodal annotation tools</h2>
 <p>The multimodal-annotation-distance tool allows you to use a tier as a
