--- a/multimodal-annotation-tool-R.html
+++ b/multimodal-annotation-tool-R.html
@@ -364,7 +364,7 @@ display: none;
 It requires an annotated file in ELAN (.eaf) format and outputs a table
 with the reference tier and the compared tiers.</p>
 <p>The tool multimodal-annotation-distance can be pulled from: <a href="https://github.com/JorgeFCS/multimodal-annotation-distance.git" class="uri">https://github.com/JorgeFCS/multimodal-annotation-distance.git</a></p>
-<p>To cite the tool: Barros, C. A., Ciprián-Sánchez, J. F., & Santos, S. M. (2024). A Tool for Determining Distances and Overlaps between Multimodal Annotations. In N. Calzolari, M.-Y. Kan, V. Hoste, A. Lenci, S. Sakti, & N. Xue (Eds.), <em>Proceedings of the 2024 Joint International Conference on Computational Linguistics, Language Resources and Evaluation (LREC-COLING 2024)</em> (pp. 1705–1714). ELRA and ICCL. https://aclanthology.org/2024.lrec-main.150</p>
+<p>To cite the tool: Barros, C. A., Ciprián-Sánchez, J. F., & Santos, S. M. (2024). A Tool for Determining Distances and Overlaps between Multimodal Annotations. In N. Calzolari, M.-Y. Kan, V. Hoste, A. Lenci, S. Sakti, & N. Xue (Eds.), <em>Proceedings of the 2024 Joint International Conference on Computational Linguistics, Language Resources and Evaluation (LREC-COLING 2024)</em> (pp. 1705–1714). ELRA and ICCL. <a href="https://aclanthology.org/2024.lrec-main.150" class="uri">https://aclanthology.org/2024.lrec-main.150</a></p>
 <div id="multimodal-annotation-tools" class="section level2">
 <h2>Multimodal annotation tools</h2>
 <p>The multimodal-annotation-distance tool allows you to use a tier as a
@@ -725,9 +725,7 @@ University, Georgetown.</li>
 <em>pympi-ling</em>: a python module for processing elans eaf<br />
 and praats textgrid annotation files. <a href="https://pypi.python.org/pypi/pympi-ling" class="uri">https://pypi.python.org/pypi/pympi-ling</a>. Version
 1.70.</li>
-<li>Barros, Camila A.; Ciprián-Sánchez, Jorge Francisco; Mendes Santos,
-Saulo. (2024) <em>A Tool for Determining Distances and Overlaps between
-Multimodal Annotations.</em> In LREC-COLING 2024.</li>
+<li>To cite the tool: Barros, C. A., Ciprián-Sánchez, J. F., & Santos, S. M. (2024). A Tool for Determining Distances and Overlaps between Multimodal Annotations. In N. Calzolari, M.-Y. Kan, V. Hoste, A. Lenci, S. Sakti, & N. Xue (Eds.), <em>Proceedings of the 2024 Joint International Conference on Computational Linguistics, Language Resources and Evaluation (LREC-COLING 2024)</em> (pp. 1705–1714). ELRA and ICCL. <a href="https://aclanthology.org/2024.lrec-main.150" class="uri">https://aclanthology.org/2024.lrec-main.150</a></li>
 </ol>
 </div>
 </div>
