--- a/multimodal-annotation-tool-R.html
+++ b/multimodal-annotation-tool-R.html
@@ -725,7 +725,12 @@ University, Georgetown.</li>
 <em>pympi-ling</em>: a python module for processing elans eaf<br />
 and praats textgrid annotation files. <a href="https://pypi.python.org/pypi/pympi-ling" class="uri">https://pypi.python.org/pypi/pympi-ling</a>. Version
 1.70.</li>
-<li>To cite the tool: Barros, C. A., Ciprián-Sánchez, J. F., & Santos, S. M. (2024). A Tool for Determining Distances and Overlaps between Multimodal Annotations. In N. Calzolari, M.-Y. Kan, V. Hoste, A. Lenci, S. Sakti, & N. Xue (Eds.), <em>Proceedings of the 2024 Joint International Conference on Computational Linguistics, Language Resources and Evaluation (LREC-COLING 2024)</em> (pp. 1705–1714). ELRA and ICCL. <a href="https://aclanthology.org/2024.lrec-main.150" class="uri">https://aclanthology.org/2024.lrec-main.150</a></li>
+<li>To cite the tool: Barros, C. A., Ciprián-Sánchez, J. F., & Santos, S. M. (2024).
+  A Tool for Determining Distances and Overlaps between Multimodal Annotations.
+  In N. Calzolari, M.-Y. Kan, V. Hoste, A. Lenci, S. Sakti, & N. Xue (Eds.),
+  <em>Proceedings of the 2024 Joint International Conference on Computational Linguistics,
+    Language Resources and Evaluation (LREC-COLING 2024)</em> (pp. 1705–1714). ELRA and ICCL. 
+  <a href="https://aclanthology.org/2024.lrec-main.150" class="uri">https://aclanthology.org/2024.lrec-main.150</a>.</li>
 </ol>
 </div>
 </div>
